# aws-meta-aggregator

./: .gitignore  Makefile  README.md  noxfile.py  pyproject.toml
.github/workflows/: release.yml  test.yml
src/aws_meta_aggregator/: __main__.py  prometheus_printers.py  resources.py
src/tests/: test_resources.py
