[tool.poetry]
name = "aws-meta-aggregator"
version = "0.1.0"
description = "Aggregate information for all resources in AWS account"
authors = ["Ely Deckers <e.deckers@gmail.com>"]
include = ["LICENSE"]
license = "MPL-2.0"
readme = "README.md"

[tool.poetry.dependencies]
boto3 = "^1.34.79"
python = "~3.12"

[tool.poetry.group.dev.dependencies]
bandit = { extras = ["toml"], version = "^1.7.8" }
black = "^24.3.0"
boto3-stubs = "^1.32.79"
coverage = { extras = ["toml"], version = "^7.4.4" }
isort = "^5.13.2"
mypy = "^1.9.0"
nox = "^2024.3.2"
pre-commit = "^3.7.0"
pylint = "^3.1.0"
pytest = "^8.1.1"
pytest-cov = "^4"
moto = {extras = ["resourcegroupstaggingapi"], version = "^5.0.5"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

#########################################################################################
# Testing
#########################################################################################

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
markers = ["isolated", "e2e"]


[tool.coverage]
omit = "**/tests/**"

[tool.coverage.report]
show_missing = true
fail_under = 0      # FIXME ED "You've got to pump those numbers up. Those are rookie numbers!"

[tool.coverage.html]
directory = ".reports/coverage/html"

[tool.coverage.xml]
output = ".reports/coverage/coverage.xml"


#########################################################################################
# Style checking
#########################################################################################

[tool.bandit]
assert_used = { skips = ["**/test_*.py"] }

[tool.black]
target-version = ["py312"]

[tool.isort]
profile = "black"

[tool.pylint.BASIC]
good-names = "log"

[tool.pylint.MASTER]
disable = [
    "C0114", # missing-module-docstring
    "C0115", # missing-class-docstring
    "C0116", # missing-function-docstring
    "E0401", # import-error
    "R0801", # duplicate-code
    "W0511", # fixme
]

[tool.pylint.pre-commit-hook]
limit = 10

[tool.mypy]
strict = true
ignore_missing_imports = true
